--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/background-geolocation": "^4.12.2",
-    "@ionic-native/background-mode": "^4.12.2",
+    "@ionic-native/background-geolocation": "^5.32.0",
+    "@ionic-native/background-mode": "^5.32.0",
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/geolocation": "^4.12.2",
     "@ionic-native/local-notifications": "^4.12.2",
@@ -32,24 +32,26 @@
     "cordova-android": "7.0.0",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-background-mode": "git+https://github.com/katzer/cordova-plugin-background-mode.git",
-    "cordova-plugin-badge": "^0.8.7",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.0",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^2.5.3",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
-    "cordova-plugin-mauron85-background-geolocation": "^2.3.5",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "ionic-angular": "3.9.2",
+    "cordova-plugin-mauron85-background-geolocation": "^2.3.6",
+    "cordova-plugin-splashscreen": "^5.0.4",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "ionic-angular": "3.9.10",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@babel/core": "^7.13.15",
+    "@babel/register": "^7.13.14",
+    "@ionic/app-scripts": "3.2.4",
     "typescript": "~2.6.2"
   },
   "description": "A background geolocation demo",
@@ -63,18 +65,27 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-local-notification": {},
       "cordova-plugin-background-mode": {},
       "cordova-plugin-geolocation": {
-        "GEOLOCATION_USAGE_DESCRIPTION": "App requires geolocation enabled"
+        "GEOLOCATION_USAGE_DESCRIPTION": "App requires geolocation enabled",
+        "GPS_REQUIRED": "true"
       },
       "cordova-plugin-mauron85-background-geolocation": {
         "GOOGLE_PLAY_SERVICES_VERSION": "11+",
         "ANDROID_SUPPORT_LIBRARY_VERSION": "23+",
         "ALWAYS_USAGE_DESCRIPTION": "App requires background tracking enabled",
-        "MOTION_USAGE_DESCRIPTION": "App requires motion detection"
+        "MOTION_USAGE_DESCRIPTION": "App requires motion detection",
+        "ICON": "@mipmap/icon",
+        "SMALL_ICON": "@mipmap/icon",
+        "ACCOUNT_NAME": "@string/app_name",
+        "ACCOUNT_LABEL": "@string/app_name",
+        "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+        "CONTENT_AUTHORITY": "$PACKAGE_NAME"
       }
     }
   }
